完成打包配置